# HarnessTune

./: .gitignore  README.md  pyproject.toml
agent_tracegrad/: __init__.py  cli.py
agent_tracegrad/_vendor/: __init__.py
agent_tracegrad/analysis/: __init__.py  aggregation.py  ranking.py  single_trace.py
agent_tracegrad/attribution/: __init__.py  gradient.py  method.py  result.py
agent_tracegrad/diagnosis/: __init__.py  atomizer.py  boundary.py  drill.py  html_report.py  influence.py  landscape.py  patterns.py  report.py  runner.py  types.py
agent_tracegrad/evaluation/: __init__.py  annotations.py  counterfactual.py  evidence.py  export.py  ground_truth.py  metrics.py  orchestration.py  replay.py  runner.py  sample_generation.py  spec.py
agent_tracegrad/model/: __init__.py  adapter.py  hf_adapter.py
agent_tracegrad/semantic/: __init__.py  interpreter.py
agent_tracegrad/trace/: __init__.py  adapter.py  agentpi_adapter.py  (+5 more)
tests/: test_analysis_aggregation.py  test_cli.py  test_core_contracts.py  test_diagnosis_drill.py  test_diagnosis_html_report.py  test_diagnosis_influence.py  test_diagnosis_landscape.py  test_diagnosis_patterns.py  test_diagnosis_runner.py  test_evaluation_annotations.py  test_evaluation_counterfactual.py  test_evaluation_evidence.py  test_evaluation_export.py  test_evaluation_metrics.py  test_evaluation_orchestration.py  test_evaluation_runner.py  test_gradient_attribution.py  test_hf_adapter.py  test_sample_generation.py  test_single_trace_analysis.py  test_target_objective.py  test_trace_ingestion.py  test_trace_level_perturbation.py
(+17 files in other folders)
